# api-petrobras

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  build.sh  docker-compose.yml  mermaid.md  prd.md  pyproject.toml
.specs/features/: F-02.md  F-03.md  _TEMPLATE.md
.specs/project/: CHANGELOG.md  PROJECT.md  ROADMAP.md  STATE.md
apps/accounts/: admin.py  apps.py  factories.py  models.py  serializers.py  services.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_passwordresetcode.py
apps/accounts/tests/: test_email_verification.py  test_factories.py  test_password_reset_code.py  test_serializers.py  test_services.py  test_user_model.py  test_views.py
apps/core/: urls.py  views.py
apps/core/tests/: test_health.py  test_status.py
config/: settings.py  urls.py
config/settings/: base.py  dev.py  prod.py
