[project]
name = "api-petrobras"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.4",
    "django-environ>=0.13.0",
    "djangorestframework>=3.17.1",
    "gunicorn>=25.3.0",
    "psycopg[binary]>=3.3.3",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "ruff>=0.15.10",
]
